2013-10-08  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c (list_get_minimal_size): Corrected
	minimal width calculations.

2013-10-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Update note on colors on emu console.

2013-10-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_get_file_block): Give GRUB_ERR_BAD_FS
	for quadruple indirect rather than GRUB_ERR_NOT_IMPLEMENTED_YET as
	it's FS and not GRUB limitation.

2013-10-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/efi/startup.S: Remove thumb leftover.

2013-10-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/efi/init.c: Rewrite timer fucntion.

2013-10-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/10_hurd.in: Use `version_find_latest` to sort gnumach
	kernels by version order.

2013-10-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/random_unix.c: Add kFreeBSD to the list of secure RNG.

2013-10-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Add AROS hostdisk and getroot routines.

2013-10-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Make cryptodisk and diskfilter probe data retrievable programmatically
	and not just printable.

2013-10-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Split random retrieving code into separate files.

2013-10-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/dl.c (do_relocations): Accept and ignore
	R_ARM_V4BX.

2013-10-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/video_checksum.c: Increase robustness to out of memory
	condition.
	* grub-core/tests/fake_input.c: Likewise.
	* grub-core/tests/cmdline_cat_test.c: Likewise.

2013-10-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/capture.c: Do not do finalization when .fini
	is called as there is explicit capture_end.

2013-10-03  Vladimir Serbinenko  <phcoder@gmail.com>
